#
# Copyright (C) 2005 Axis Communications AB
#
# This file is part of Mini DHCP6.
#
# mdhcp6 is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# mdhcp6 is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with mdhcp6.  If not, see <http://www.gnu.org/licenses/>.
# 
# Authors: Edgar E. Iglesias <edgar@axis.com>
#  

bin_PROGRAMS = mdhcp6

# main program
mdhcp6_SOURCES  = main.c

# modules
mdhcp6_SOURCES  += mdhcp6.c mdhcp6.h
mdhcp6_SOURCES += dhcpv6.c dhcpv6.h
mdhcp6_SOURCES += net_bsdsock.c net.h
mdhcp6_SOURCES += notify.c notify.h
mdhcp6_SOURCES += lease.c lease.h
mdhcp6_SOURCES += optionmap.c optionmap.h
mdhcp6_SOURCES += msgbuf.c msgbuf.h
mdhcp6_SOURCES += random.c random.h
mdhcp6_SOURCES += ptime.c ptime.h
mdhcp6_SOURCES += if.c if.h
mdhcp6_SOURCES += netlink.c netlink.h
